...
    let defaultSounds = (slideIn: "placeholder",
                         showImage: "placeholder2")

    private var tapped: Bool

    enum AccessibilityIdentifiers: String {
        case popupEventPlayer = "popup-event-player"
    }

    /* *******************************
     MARK: Initializers
     ******************************* */
    required init(coder aDecoder: NSCoder) {
...
