...
                        <subviews>
                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="start_scene" translatesAutoresizingMaskIntoConstraints="NO" id="lq3-AT-Fhu">
                                <rect key="frame" x="0.0" y="0.0" width="667" height="375"/>
                            </imageView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nQo-QP-3Ls" userLabel="About Button">
                                <rect key="frame" x="20" y="12" width="138" height="30"/>
                                <accessibility key="accessibilityConfiguration" identifier="startvc-about-button"/>
                                <constraints>
                                    <constraint firstAttribute="width" secondItem="nQo-QP-3Ls" secondAttribute="height" multiplier="23:5" id="9j1-ox-qfh"/>
                                    <constraint firstAttribute="height" constant="30" id="fQ2-b5-sF9"/>
                                </constraints>
                                <state key="normal" image="about_button"/>
                                <connections>
...
                                <connections>
                                    <action selector="Start:" destination="S65-lq-9jr" eventType="touchUpInside" id="fIF-Th-UQv"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0jE-f7-7E2" userLabel="New User Button">
                                <rect key="frame" x="227" y="275" width="213" height="40"/>
                                <accessibility key="accessibilityConfiguration" identifier="startvc-new-game-button"/>
                                <constraints>
                                    <constraint firstAttribute="width" secondItem="0jE-f7-7E2" secondAttribute="height" multiplier="213:40" id="SOf-Vo-BaN"/>
                                    <constraint firstAttribute="height" constant="40" id="dTA-34-5Wh"/>
                                </constraints>
                                <state key="normal" image="new_game_buton">
                                    <color key="titleShadowColor" red="0.5" green="0.5" blue="0.5" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
...
                                <connections>
                                    <segue destination="Ayb-3h-vA7" kind="modal" identifier="toShopView" id="11c-aR-Qgq"/>
                                </connections>
                            </button>
                            <button opaque="NO" tag="5" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="b9k-wY-tNO" userLabel="Home Scenario Button">
                                <rect key="frame" x="20" y="169" width="100" height="150"/>
                                <accessibility key="accessibilityConfiguration" identifier="mapvc-home-scenario-button"/>
                                <state key="normal">
                                    <color key="titleColor" red="0.92477746660000004" green="1" blue="0.97109429339999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                </state>
                                <connections>
                                    <action selector="scenarioSelected:" destination="S3c-uW-lpA" eventType="touchUpInside" id="kJ1-gd-fd8"/>
                                </connections>
...
