...
    private var lastPositions: Array<StorySequence.ImagePosition> = [.hidden, .hidden]

    /**
     For easy access to accessibility identifiers used in testing.
     */
    enum AccessibilityIdentifiers: String {
        case storySequencePlayer = "story-sequence-player"
        case skipWarningView = "ssp-skip-warning-view"
        case skipWarningYes = "ssp-skip-warning-view-button-yes"
        case skipWarningNo = "ssp-skip-warning-view-button-no"
    }

    /* *******************************
     MARK: Initializers
     ******************************* */
    required init(coder aDecoder: NSCoder) {
...
