...
let boxEnlargingKey = "enlarge"
let boxShrinkingKey = "shrink"
let warningTitleMessage = "Warning"
let errorRestartAppMessage = "Error initializing user data, please restart the app."
let okText = "OK"
let createAvatarMessage = "Create your avatar to start the game!"
let confirmationTitleMessage = "Are you sure?"
let startNewGameMessage = "If you start a new game, previous data and all Karma points will be lost!"
let newAvatarTitleMessage = "Create New Avatar"
let cancelText = "Cancel"
let greyOutBoxImageName = "shop_unavailable_box"
let boxImageName = "shop_available_box"
let errorFetchingAvatarMessage = "Error fetching avatar and score data, please retry this action. If that doesn't help, try restarting or reinstalling the app."
let oopsTitleMessage = "Oops!"
let notEnoughPointsMessage = "You don't have enough points to buy that!"
...
