...
            self.continueButton.isHidden = false
            self.continueButton.run(SKAction.sequence([buttonWaitAction, self.fadeInAction]))
        }
        
    }
    
    // Called when "continue button" is pressed under the "result banner".
    func showDescription() {
        
        // Fade out result banner.
        resultBanner.run(fadeOutAction) {
            self.resultBanner.isHidden = true
        }
...
